@@ -1,3 +1,5 @@
+2006/6/21 -- released version 20060621_trunk
+
 2006/6/20 -- released version 20060620_trunk
 
 2006/6/19 -- released version 20060619_trunk
